<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/activity_bg2"
        tools:context=".MainActivity">
    <TextView
            android:id="@+id/dispHeader"
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/disp_header"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/material_dynamic_primary60"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.05"
            app:layout_constraintHorizontal_bias="0.5"
    />

    <TextView
            android:id="@+id/messageTitle"
            android:text="@string/message_disp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/material_dynamic_primary40"

            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dispHeader"
            app:layout_constraintHorizontal_bias="0.5"
    />
    <EditText
            android:id="@+id/messageReceivedET"
            android:text="@string/msg_placeholder"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/intent_value"

            android:hint="Hint"
            android:autofillHints=""
            android:inputType="none"
            android:focusable="false"

            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/messageTitle"
            app:layout_constraintHorizontal_bias="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>
